--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,6 @@
 		<!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
 			resources, i.e. build is platform dependent! -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- Define the version of JBoss' Java EE 6 APIs and Tools we want to import. -->
-		<!-- Certified version of the JBoss EAP components we want to use -->
-		<jboss.bom.version>1.0.0.M12-redhat-1</jboss.bom.version>
-		<!-- Alternatively, comment out the above line, and un-comment the line 
-			below to use version 1.0.0.Final which is based on community built dependencies. -->
-		<!-- <jboss.bom.version>1.0.0.Final</jboss.bom.version> -->
 	</properties>
 
 
@@ -88,21 +82,13 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		<!-- Source of Java EE APIs, like Servlet and CDI -->
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>3.0</version>
-		</dependency>
-		
 		<!-- First declare the APIs we depend on and need for compilation. All 
-			of them are provided by JBoss AS 7 -->
-
+			of them are provided by JBoss AS 7 (and EAP6) -->
+		<dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.0_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Import the CDI API, we use provided scope as the API is included in 
 			JBoss AS 7 -->
 		<dependency>
@@ -135,15 +121,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-
-		<!-- Import the JSF API, we use provided scope as the API is included in 
-			JBoss AS 7 -->
-		<dependency>
-			<groupId>org.jboss.spec.javax.faces</groupId>
-			<artifactId>jboss-jsf-api_2.1_spec</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
+		<!-- Spring jars -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -160,6 +138,8 @@
 			<artifactId>spring-web</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
+		
+		<!-- CDI/Spring integration -->
 		<dependency>
 			<groupId>org.jboss.seam.spring</groupId>
 			<artifactId>seam-spring-core</artifactId>
@@ -173,21 +153,13 @@
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
-				processors -->
+				processors if you wished to use JPA 2.0 typesafe compilation -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1.1</version>
-				<configuration>
-					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
 			<!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
